# scrolldata

./: .gitignore  LICENSE  README.md  setup.cfg
scrolldata/: __init__.py  __main__.py  _make_patch_dataset.py  _scroll.py  patches.py  scroll.py  torch.py  utils.py
test/: test_f05score.py  test_rle.py
