[metadata]
name = scrolldata
version = 0.1.0
author = "Matthew Russell"
author_email = matthew@mruss.dev
description = A utility for loading data from the Vesuvius Challenge.
license = "MIT"

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    numpy
    Pillow
    tqdm